Fix issue with gutter line numbers being clipped at the bottom of the viewport

--- a/styles.less
+++ b/styles.less
@@ -32,7 +32,7 @@ atom-text-editor::shadow .selection .region {
 
 // Add space between tab bar and editor
 atom-text-editor::shadow .scroll-view {
-  padding: 5px 0 0 8px;
+  padding: 0px 0 0 8px;
 }
 
 // Hide tab bar if no tabs are present
@@ -55,7 +55,7 @@ atom-text-editor::shadow {
   }
   .gutter {
     background-color: #ddd;
-    padding-top: 6px;
+    margin-bottom: -12px !important;
     .line-number {
        color: #888;
        opacity: 1;
